# sage-whisper

./: .env.example  .gitignore  CLAUDE.md  Python API Prompt.txt  alembic.ini  main.py  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
alembic/versions/: 001_create_user_table.py  002_create_voice_note_table.py  003_create_transcript_tables.py  004_add_password_reset_fields.py
app/: __init__.py  config.py  database.py  dependencies.py  rate_limit.py
app/models/: transcript.py  user.py  voice_note.py
app/routers/: __init__.py  auth.py  transcripts.py  voice_notes.py
app/schemas/: auth.py  transcript.py  voice_note.py
app/services/: auth.py  jwt.py  transcript.py  transcription.py  voice_note.py
templates/: base.html  forgot_password.html  home.html  login.html  register.html  reset_password.html  toast_partial.html  transcript_detail.html  transcripts.html  upload.html
templates/partials/: transcript_rows.html  transcription_status.html
tests/: conftest.py  test_auth.py  test_transcription.py  test_transcripts.py  test_voice_notes.py
