[project]
name = "sage-whisper"
version = "0.1.0"
description = "Voice note transcription app powered by faster-whisper"
requires-python = ">=3.10"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "jose.*",
    "faster_whisper.*",
    "slowapi.*",
]
ignore_missing_imports = true
